# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

## [0.13.3] - 2024-08-09: "Blinded by the Light"

This point release fixes an important bug by restoring the earned fee
information in CLBOSS.

### Added

- The version string is now logged on startup and in the
  `clboss-status` output ([#205]).
- Added an earnings_tracker diagram.

### Fixed

- The `ForwardFeeMonitor` (and subsequently the `EarningsTracker`) have
  restored ability see fee income ([#222], [#223]).
- A possible vector out of bounds access was removed ([#219]).
- Added totals to clboss-status offchain_earnings_tracker ([#223]).

## [0.13.2] - 2024-07-18: "Bwahaha's Dominion"

### Added

- Added `signet` support ([#148]).
- Updated the seeds list ([#208], 
- Added module diagrams for channel creation, offchain to onchain
  swaps, and channel balancing ([#200], [#203]).

### Changed

- testnet: Reduce the `min_nodes_to_process` because testnet is shrinking ([#209]).
- Improve listpeers handling diagnostics ([#214], [#215]).
- Improve Initialization of OnchainFeeMonitor with Conservative
  Synthetic History ([#210]).

### Fixed

- Converted deprecated listpeer usage to listpeerchannels ([#213], [#198]).
- Recognize `--developer` CLI flag and don't exit giving usage ([#185], [#216])).

## [0.13.1] - 2024-04-16: "E Street Fix"

### Fixed

- CLN `v24.02` deprecated the RPC `msatoshi` fields which needed to be
  converted to `amount_msat` instead.  This caused channel candidates
  to not be found ([#189]) (and maybe other problems).  Fixed in
  ([#190]).
- CLN `v24.02` deprecated the RPC `private` field in the channel info
  RPC data because private channels are no longer present.  Remove
  references to the field because we only want to skip these channels
  anyway.  Fixes ([192])

### Changed

- The minimum number of network nodes seen before initiating certain