@@ -4,6 +4,16 @@ All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
 
+## [Unreleased]
+
+### Added
+
+- Added `Util::BacktraceException` which captures backtraces where an
+  exception is thrown and then formats them for debugging when they
+  are displayed with `what()`.  The backtraces are more useful if the
+  following configuration is used: `./configure CXXFLAGS="-g -Og"` but
+  this results in larger, less optimized binaries.
+
 ## [0.13.3] - 2024-08-09: "Blinded by the Light"
 
 This point release fixes an important bug by restoring the earned fee
